# int_grad_corr

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  environment.yml  environment_gpu.yml  igc_benchmark.ipynb  igc_mnist.ipynb  pyproject.toml
.github/workflows/: static.yml
docs/source/: api.rst  biblio.bib  conf.py  examples.rst  guide.rst  igc.base.rst  igc.bsc.rst  igc.igac.rst  igc.naive.rst  igc.rst  index.rst
docs/source/_templates/: class.rst
examples/: basic_usage.ipynb  environment.yml  environment_gpu.yml  environment_macos_intel.yml  igc_benchmark.ipynb  requirements.txt  requirements_gpu.txt  requirements_macos_intel.txt
examples/igcsimulation/: __init__.py  imgstat_1v0.py  mask_1v0.py  model_1v0.py  model_cat_1v0.py  simulation_1v0.py
examples/torchutils/: __init__.py  abstract_model_1v0.py  dataloader_1v0.py  modules_1v1.py  weight_init_1v0.py
igc/: __init__.py  base.py  bsc.py  bsc_1v0.py  igac.py  igc.py  igc_1v0.py  igc_2v0.py  naive.py  naive_2v0.py
igcbenchmark/: __init__.py  download_data.py  image_1v0.py  imgstat_1v0.py  mask_1v0.py  model_msk_stat_0v0.py  model_msk_stat_1v0.py  model_msk_stat_cat_1v0.py
mnist/: __init__.py  figure_1v0.py  figures_1v0.py  mnist.py  model_mnist_1v0.py  model_mnist_1v1.py
torchutils/: __init__.py  abstract_model_1v0.py  dataloader_1v0.py  modules_1v0.py  weight_init_1v0.py
