[project]
name = "int-grad-corr"
version = "1.1.0"
authors = [
    {name="Pierre Lelièvre", email="contact@plelievre.com"},
]
description = "Compute Integrated Gradient Correlation (IGC) attributions."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "scipy",
    "torch>=2",
    "tqdm>=4",
]

[project.urls]
Homepage = "https://github.com/plelievre/int_grad_corr"
Documentation = "https://github.com/plelievre/int_grad_corr"
Issues = "https://github.com/plelievre/int_grad_corr/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [ "igc" ]

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
lines_after_imports = 2
known_first_party = ["torchutils"]
known_third_party = ["igc"]
